[gd_scene load_steps=3 format=2]

[ext_resource path="res://BaseLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Level3.gd" type="Script" id=2]

[node name="Level1" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="StartPosition" parent="." index="1"]
position = Vector2( 400, 990 )

[node name="Paddle" parent="." index="5"]
self_modulate = Color( 0.666667, 0.160784, 0.160784, 1 )

[node name="WinTimer" type="Timer" parent="." index="10"]
wait_time = 5.0
[connection signal="timeout" from="WinTimer" to="." method="_on_WinTimer_timeout"]
